--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -7,14 +7,14 @@
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Teatro Español à Paris (30/6 & 4/7)</title>
-    <meta name="description" content="Página de la representación de los grupos amateurs de teatro <<Teatro Español à Paris>> en París" />
+    <meta name="description" content="Página de la representación <<dramaTOURgia>> de los grupos amateurs de teatro <<Teatro Español à Paris>> en 2022" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/teatroespanolaparis2022.html" />
     <meta property="og:title" content="Teatro Español à Paris (30/6 & 4/7)" /><!--35char-->
-    <meta property="og:description" content=""><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/logo2.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:description" content="Página de la representación <<dramaTOURgia>> de los grupos amateurs de teatro <<Teatro Español à Paris>> en 2022"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/PosterTeatro2smalls.jpg"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -34,14 +34,14 @@
 <h1 align="center">drama<span style="color:#ee2523;">TOUR</span>gia<br/>
 un viaje teatral a través de España</h1>
 
-<div class="row" style="padding-bottom:2em;">
+<!--<div class="row" style="padding-bottom:2em;">
 <div class="col" style="text-align:center;">
 <a href="imgs/PosterTeatro1.jpg"><img style="width:30%;" src="imgs/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
 </div>
 <div class="col" style="text-align:center;">
 <a href="imgs/PosterTeatro2.jpg"><img style="width:30%;" src="imgs/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
 </div>
-</div>
+</div>-->
 
 <p sytle="text-align: justify;">
 El proyecto <em>Teatro Espaõol à Paris</em> de Luzía Eviza consiste de varios grupos de teatro amateur en castellano en París. Al final de este cursos, sus dos grupos realizarán una representación en la Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris), respectivamente, el 30 de junio
