--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -31,8 +31,8 @@
 
 <div class="container" style="text-align:justify;">
 <br/>
-<h1 align="center">drama<span style="color:#ee2523;">TOUR</span>gia<br/>
-un viaje teatral a través de España</h1>
+<h1 align="center">drama<span style="color:#ee2523;">TOUR</span>gia<h1/>
+<h2 align="center">un viaje teatral a través de España</h2>
 
 <!--<div class="row" style="padding-bottom:2em;">
 <div class="col" style="text-align:center;">
@@ -44,14 +44,14 @@ un viaje teatral a través de España</h1>
 </div>-->
 
 <p sytle="text-align: justify;">
-El proyecto <em>Teatro Espaõol à Paris</em> de Luzía Eviza consiste de varios grupos de teatro amateur en castellano en París. Al final de este cursos, sus dos grupos realizarán una representación en la Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris), respectivamente, el 30 de junio
+El proyecto <em>Teatro Español à Paris</em> de Luzía Eviza consiste de varios grupos de teatro amateur en castellano en París. Al final de este cursos, sus dos grupos realizarán una representación en la Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris), respectivamente, el 30 de junio
 y el 4 de julio a las 21:30.
 </p>
 <p sytle="text-align: justify;">
 Ambas representaciones tratan sobre el presente, el pasado y la historia más reciente de España. En cada representación, se reúnen diferentes obras de teatro breve, centradas en la dramaturgia española contemporánea. Entre las obras representadas, se encuentran obras de los siguientes autores: Juan Mayorga, Juan Carlos Rubio, Denise Despeyroux, Cristina Colmena, Luis Fernando de Julián, Elisenda Guiu y Manuel Benito.
 </p>
 <p sytle="text-align:justify;padding-top:1em;">Más información en: teatroespanolentradas@gmail.com</p>
-<h2>Primera representación (30/junio, 21:30)</h2>
+<h3>Primera representación (30/junio, 21:30)</h3>
 <p sytle="text-align: justify;">
   <b>¿Cuándo?</b> 30 de junio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
@@ -59,12 +59,10 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
   <b>¿Cuánto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
   <b>¿Cómo adquiero las entradas?</b> A traves de <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">nuestro link en Lydia</a>:
 </p>
-<div class="row" align="center" style="font-size:2vw;padding-bottom:1vw;">
-    <div class="col">
-      <a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;">Compra tus entradas para la primera representación</a>
-    </div>
-</div>
-<h2>Segunda representación (30/junio, 21:30)</h2>
+<div class="row" align="center" style="padding-bottom:1em;"><div class="col">
+<a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;font-size:2em;">Compra tus entradas para la primera representación</a>
+</div></div>
+<h3>Segunda representación (30/junio, 21:30)</h3>
 <p sytle="text-align: justify;">
   <b>¿Cuándo?</b> 4 de julio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
@@ -78,7 +76,7 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
     </div>
 </div>-->
 
-<h2>Carteles</h2>
+<h3>Carteles</h3>
 
 Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Clara Campoamor y el segundo a Federico García Lorca.
 
@@ -114,8 +112,6 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz><oe/><rz>wbfhr.gbaryyv-phrgb(NG)vaevn.se</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
-
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByTagName("H1");
@@ -125,17 +121,18 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
       }
     x = document.getElementsByTagName("H2");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:1.8em;font-weight:bold;";
+       x[i].style="font-size:1.3em;font-weight:bold;";
     }
     x = document.getElementsByTagName("H3");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:1em;font-weight:bold;";
+       x[i].style="font-size:1.3em;font-weight:bold;";
     }
-    document.getElementById("finalsentence").innerHTML="";
     x = document.getElementsByClassName("btn btn-secondary");
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:100%;";
+     x[i].style="width:100%;font-size:2em;";
+     x[i].innerHTML="Compra tus entradas";
     }
+
     }
     //-->
     </script>
