--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -125,8 +125,10 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
     }
     x = document.getElementsByTagName("H3");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:1.3em;font-weight:bold;";
+       x[i].style="font-size:1.5em;font-weight:bold;";
     }
+    x[0].innerHTML='Primera representación<br/><span style="text-align:right;">(30/junio, 21:30)</span>';
+    x[1].innerHTML='Segunda representación<br/><span style="text-align:right;">(4/julio, 21:30)</span>';
     x = document.getElementsByClassName("btn btn-secondary");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;font-size:2em;";
