posteres teatro + versionmovil teatro

--- a/multimedia.html
+++ b/multimedia.html
@@ -112,12 +112,26 @@
   <h3>Designed posters for events</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
+    <img style="width:90%;" src="design/PosterTeatro1small.jpg" alt="Poster of dramaTOURgia with Clara Campoamor in the image"/></a>
+    <p style="margin:0;text-align:center;"><b>dramaTOURgia<br/>un viaje teatral por España</b><br/>30/June & 4/July of 2022
+    </p><span style="margin:0;"><a style="float:left;" href="teatroespanolaparis2022.html">&ensp;Webpage of the event&ensp;</a>
+    <a style="float:right;" href="design/PosterTeatro1small.jpg">Poster of the event</a></span>
+    </div>
+
+    <div class="col-md-4" style="text-align:center;padding-top:1em;">
+    <img style="width:90%;" src="design/PosterTeatro2small.jpg" alt="Poster of dramaTOURgia with Federico García Lorca in the image"/></a>
+    <p style="margin:0;text-align:center;"><b>dramaTOURgia<br/>un viaje teatral por España</b><br/>30/June & 4/July of 2022
+    </p><span style="margin:0;"><a style="float:left;" href="teatroespanolaparis2022.html">&ensp;Webpage of the event&ensp;</a>
+    <a style="float:right;" href="design/PosterTeatro2small.jpg">Poster of the event</a></span>
+    </div>
+
+    <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August 2019
     </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">&ensp;Webpage of the event&ensp;</a>
     <a style="float:right;" href="design/felipefest_poster1.png">Poster of the event</a></span>
-    <span><a style="float:left;" href="design/felipefest_poster2.png">1st rejected poster</a>
-    <a style="float:right;" href="design/felipefest_poster3.png">2nd rejected poster</a></span>
+    <span><a style="float:left;" href="design/felipefest_poster2.png">1st discarded poster</a>
+    <a style="float:right;" href="design/felipefest_poster3.png">2nd discarded poster</a></span>
     </div>
 
     <!--<div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -125,14 +139,14 @@
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August 2019
     </p><span>
     <a style="float:right;" href="design/felipefest_poster2.png">&ensp;1st draft of poster of the event&ensp;</a></span>
-    </div>
+  </div>-->
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster3.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A  conference in honor of Felipe Cucker</b><br/>August 2019
     </p><span>
-    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2nd draft of poster of the event&ensp;</a></span>
-    </div>-->
+    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2nd discarded draft of the poster&ensp;</a></span>
+    </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/bmsstudconf6_poster_red.jpg" alt="Poster of 6th BMS Student Conference"/></a>
