--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -113,12 +113,26 @@
   <h3>Carteles diseñados para eventos</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
-    <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
+    <img style="width:90%;" src="design/PosterTeatro1small.jpg" alt="Poster de dramaTOURgia con Clara Campoamor en la imagen"/></a>
+    <p style="margin:0;text-align:center;"><b>dramaTOURgia<br/>un viaje teatral por España</b><br/>30/junio & 4/julio de 2022
+    </p><span style="margin:0;"><a style="float:left;" href="teatroespanolaparis2022.html">&ensp;Página web del evento&ensp;</a>
+    <a style="float:right;" href="design/PosterTeatro1small.jpg">Cartel del evento</a></span>
+    </div>
+
+    <div class="col-md-4" style="text-align:center;padding-top:1em;">
+    <img style="width:90%;" src="design/PosterTeatro2small.jpg" alt="Poster de dramaTOURgia con Federico García Lorca en la imagen"/></a>
+    <p style="margin:0;text-align:center;"><b>dramaTOURgia<br/>un viaje teatral por España</b><br/>30/junio & 4/julio de 2022
+    </p><span style="margin:0;"><a style="float:left;" href="teatroespanolaparis2022.html">&ensp;Página web del evento&ensp;</a>
+    <a style="float:right;" href="design/PosterTeatro2small.jpg">Cartel del evento</a></span>
+    </div>
+
+    <div class="col-md-4" style="text-align:center;padding-top:1em;">
+    <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster de Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">Página web del evento</a>
     <a style="float:right;" href="design/felipefest_poster1.png">Cartel del evento</a></span>
-    <span><a style="float:left;" href="design/felipefest_poster2.png">1ª versión rechazada</a>
-    <a style="float:right;" href="design/felipefest_poster3.png">2ª versión rechazada</a></span>
+    <span><a style="float:left;" href="design/felipefest_poster2.png">1ª borr. descartado</a>
+    <a style="float:right;" href="design/felipefest_poster3.png">2ª borr. descartado</a></span>
     </div>
 
     <!--<div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -126,14 +140,14 @@
     <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span>
     <a style="float:right;" href="design/felipefest_poster2.png">&ensp;1st draft of poster of the event&ensp;</a></span>
-    </div>
+  </div>-->
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
-    <img style="width:90%;" src="design/felipefest_poster3.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
-    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A  conference in honor of Felipe Cucker</b><br/>August de 2019
+    <img style="width:90%;" src="design/felipefest_poster3.png" alt="Poster of Complexity de numerical computation: A conference in honor of Felipe Cucker"/></a>
+    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span>
-    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2nd draft of poster of the event&ensp;</a></span>
-    </div>-->
+    <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2ª borrador descartado del cartel&ensp;</a></span>
+    </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/bmsstudconf6_poster_red.jpg" alt="Poster of 6th BMS Student Conference"/></a>
