--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://tonellicueto.xyz/teatroespanolaparis2022.html" />
     <meta property="og:title" content="Teatro Español à Paris (30/6 & 4/7)" /><!--35char-->
     <meta property="og:description" content="Página de la representación <<dramaTOURgia>> de los grupos amateurs de teatro <<Teatro Español à Paris>> en 2022"><!--65char-->
-    <meta property="og:image" content="https://tonellicueto.xyz/imgs/PosterTeatro2smalls.jpg"><!--300KB and minimum dimensions of 300 x 200-->
+    <meta property="og:image" content="https://tonellicueto.xyz/design/PosterTeatro2smalls.jpg"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -36,10 +36,10 @@
 
 <!--<div class="row" style="padding-bottom:2em;">
 <div class="col" style="text-align:center;">
-<a href="imgs/PosterTeatro1.jpg"><img style="width:30%;" src="imgs/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro1.jpg"><img style="width:30%;" src="design/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
 </div>
 <div class="col" style="text-align:center;">
-<a href="imgs/PosterTeatro2.jpg"><img style="width:30%;" src="imgs/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro2.jpg"><img style="width:30%;" src="design/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
 </div>
 </div>-->
 
@@ -51,7 +51,7 @@ y el 4 de julio a las 21:30.
 Ambas representaciones tratan sobre el presente, el pasado y la historia más reciente de España. En cada representación, se reúnen diferentes obras de teatro breve, centradas en la dramaturgia española contemporánea. Entre las obras representadas, se encuentran obras de los siguientes autores: Juan Mayorga, Juan Carlos Rubio, Denise Despeyroux, Cristina Colmena, Luis Fernando de Julián, Elisenda Guiu y Manuel Benito.
 </p>
 <p sytle="text-align:justify;padding-top:1em;">Más información en: teatroespanolentradas@gmail.com</p>
-<h3>Primera representación (30/junio, 21:30)</h3>
+<h3>Primera representación (30/junio, a las 21:30)</h3>
 <p sytle="text-align: justify;">
   <b>¿Cuándo?</b> 30 de junio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
@@ -62,7 +62,7 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
 <div class="row" align="center" style="padding-bottom:1em;"><div class="col">
 <a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;font-size:2em;">Compra tus entradas para la primera representación</a>
 </div></div>
-<h3>Segunda representación (30/junio, 21:30)</h3>
+<h3>Segunda representación (30/junio, a las 21:30)</h3>
 <p sytle="text-align: justify;">
   <b>¿Cuándo?</b> 4 de julio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
@@ -82,10 +82,10 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-6" style="text-align:center;">
-<a href="imgs/PosterTeatro1.jpg"><img style="width:90%;" src="imgs/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro1.jpg"><img style="width:90%;" src="design/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
 </div>
 <div class="col-md-6" style="text-align:center;">
-<a href="imgs/PosterTeatro2.jpg"><img style="width:90%;" src="imgs/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro2.jpg"><img style="width:90%;" src="design/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
 </div>
 </div>
 
