--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -67,12 +67,12 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
   <b>¿Cuándo?</b> 4 de julio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
   <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
-  <b>¿Cuánto?</b> A determinar.<br/>
-  <b>¿Cómo adquiero las entradas?</b> A determinar. <!--A traves de <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">nuestro link en Lydia</a>:
+  <b>¿Cuánto?</b> 5 euros<br/>
+  <b>¿Cómo adquiero las entradas?</b> A traves del <a href="https://lydia-app.com/collect/44105-obra-de-teatro-dramaturgia/fr">siguiente link en Lydia</a>:
 </p>
 <div class="row" align="center" style="font-size:2vw;">
     <div class="col">
-      <a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;">Compra tus entradas para la segunda representación</a>
+      <a class="btn btn-secondary" href="https://lydia-app.com/collect/44105-obra-de-teatro-dramaturgia/fr" role="button" style="width:80%;">Compra tus entradas para la segunda representación</a>
     </div>
 </div>-->
 
