--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -57,7 +57,7 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
   <b>¿A qué hora?</b> A las 21:30<br/>
   <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
   <b>¿Cuánto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
-  <b>¿Cómo adquiero las entradas?</b> A traves de <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">nuestro link en Lydia</a>:
+  <b>¿Cómo adquiero las entradas?</b> A traves del <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">siguiente link en Lydia</a>:
 </p>
 <div class="row" align="center" style="padding-bottom:1em;"><div class="col">
 <a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;font-size:2em;">Compra tus entradas para la primera representación</a>
