--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -74,7 +74,7 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
     <div class="col">
       <a class="btn btn-secondary" href="https://lydia-app.com/collect/44105-obra-de-teatro-dramaturgia/fr" role="button" style="width:80%;">Compra tus entradas para la segunda representación</a>
     </div>
-</div>-->
+</div>
 
 <h3>Carteles</h3>
 
