--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -7,13 +7,13 @@
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Teatro Español à Paris (30/6 & 4/7)</title>
-    <meta name="description" content="Página de la representación <<dramaTOURgia>> de los grupos amateurs de teatro <<Teatro Español à Paris>> en 2022" />
+    <meta name="description" content="Página de la representación «dramaTOURgia» de los grupos amateurs de teatro «Teatro Español à Paris» en 2022" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/teatroespanolaparis2022.html" />
     <meta property="og:title" content="Teatro Español à Paris (30/6 & 4/7)" /><!--35char-->
-    <meta property="og:description" content="Página de la representación <<dramaTOURgia>> de los grupos amateurs de teatro <<Teatro Español à Paris>> en 2022"><!--65char-->
+    <meta property="og:description" content="Página de la representación «dramaTOURgia» de los grupos amateurs de teatro «Teatro Español à Paris» en 2022"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/design/PosterTeatro2smalls.jpg"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
