--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -57,18 +57,16 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
   <b>¿A qué hora?</b> A las 21:30<br/>
   <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
   <b>¿Cuánto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
-  <b>¿Cómo adquiero las entradas?</b> A traves del <a href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr">siguiente link en Lydia</a>:
+  <b>¿Cómo adquiero las entradas?</b> La compra es solo posible a la entrada en este momento.
 </p>
-<div class="row" align="center" style="padding-bottom:1em;"><div class="col">
-<a class="btn btn-secondary" href="https://lydia-app.com/collect/81109-muestra-teatro-espanol-en-paris/fr" role="button" style="width:80%;font-size:2em;">Compra tus entradas para la primera representación</a>
-</div></div>
+
 <h3>Segunda representación (4/julio, a las 21:30)</h3>
 <p sytle="text-align: justify;">
   <b>¿Cuándo?</b> 4 de julio de 2022<br/>
   <b>¿A qué hora?</b> A las 21:30<br/>
   <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
   <b>¿Cuánto?</b> 5 euros<br/>
-  <b>¿Cómo adquiero las entradas?</b> A traves del <a href="https://lydia-app.com/collect/44105-obra-de-teatro-dramaturgia/fr">siguiente link en Lydia</a>:
+  <b>¿Cómo adquiero las entradas?</b> Indicando tu nombre y cuánta entradas comprar en un comentario a traves del <a href="https://lydia-app.com/collect/44105-obra-de-teatro-dramaturgia/fr">siguiente link en Lydia</a>:
 </p>
 <div class="row" align="center" style="font-size:2vw;">
     <div class="col">
