--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -57,7 +57,7 @@ Ambas representaciones tratan sobre el presente, el pasado y la historia más re
   <b>¿A qué hora?</b> A las 21:30<br/>
   <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
   <b>¿Cuánto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
-  <b>¿Cómo adquiero las entradas?</b> La compra es solo posible a la entrada en este momento.
+  <b>¿Cómo adquiero las entradas?</b> La compra es solo posible a la entrada en efectivo en este momento.
 </p>
 
 <h3>Segunda representación (4/julio, a las 21:30)</h3>
