--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -28,14 +28,13 @@
       color: #F3BC1B;
       display: inline;
       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-      width:30%;
+      width:10em;
       font-size:medium;
       float:right;
       font-weight: normal;
       font-style: normal;
       font-variant:normal;
       height:1.5em;
-      width:15%;
       padding: 0em 0em;
       text-align: center;
     }
@@ -47,14 +46,13 @@
         display: inline;
         font-variant:inherit;
         font-style:inherit;
-        width:30%;
+        width:10em;
         font-size:medium;
         float:right;
         font-weight: normal;
         font-style: normal;
         font-variant:normal;
         height:1.5em;
-        width:15%;
         padding: 0em 0em;
         text-align: center;
     }
