--- a/research_es.html
+++ b/research_es.html
@@ -89,7 +89,10 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #ee2523!important;color: white!important;"><i class="fas fa-square-root-alt"></i></a></li>
 	         <li class="nav-item"><a class="nav-link" href="#areas">Áreas de interés</a></li>
            <!--<li class="nav-item"><a class="nav-link" href="#topics">Topics of interest</a></li>-->
-           <li class="nav-item"><a class="nav-link" href="#papers">Artículos científicos y preprints</a></li>
+           <!--<li class="nav-item"><a class="nav-link" href="#papers">Artículos científicos y preprints</a></li>-->
+           <li class="nav-item"><a class="nav-link" href="#preprints">Preprints</a></li>
+           <li class="nav-item"><a class="nav-link" href="#journalpapers">Artículos científicos de revista</a></li>
+           <li class="nav-item"><a class="nav-link" href="#conferencepapers">Artículos científicos de conferencia</a></li>
            <li class="nav-item"><a class="nav-link" href="#other">Otras publicaciones</a></li>
         </ul>
     </nav>
@@ -152,27 +155,33 @@
   </p>
 </div>
 <hr>
-<div id="papers">
-  <h2 class="display-4">Artículos científicos y preprints</h2>
-  <p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>
+<div id="preprints">
+  <h2 class="display-4">Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button" style="font-size:0.6em;"><i class="ai ai-arxiv-square"></i> Preprints en arXiv</a></h2>
+  <!--<p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>-->
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i>Preprints en arXiv</a></h3>
-  </div></div>
-
-  <br/><div class="cv">
-   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
-   <div class="pretalktitle"></div>
+  <!--<br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
   </div>
 
   <br/><div class="cv">
    <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832" role="button">arXiv:2203.02832</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://tolischal.github.io/">Apostolos Chalkis</a> and <a href="https://webusers.imj-prg.fr/~christina.katsamaki/">Christina Katsamaki</a>)</div>
-  </div>
+ </div>-->
+
+ <br/><div class="cv">
+  <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
+  <div class="pretalktitle"></div><div class="collaborator">(Junto a Jazz G. Suchen)</div>
+ </div>
+
+ <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
+  <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://page.math.tu-berlin.de/~radons/">Manuel Radons</a>)</div>
+ </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+   <div class="year"></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
+   <div class="pretalktitle"></div>
   </div>
 
   <br/><div class="cv">
@@ -197,13 +206,14 @@
    <div class="pretalktitle"></div><div class="collaborator">Aceptado en <a href="https://www.springer.com/journal/454/"><i>Discrete & Computational Geometry</i></a>. Esta es una versión de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Artículos científicos de revista</h3>
-  </div></div>
+</div>
+<hr>
+<div id="journalpapers">
+  <h2 class="display-4">Artículos científicos de revista</h2>
 
   <br/><div class="cv">
   <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker y J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
   </div>
 
   <br/><div class="cv">
@@ -217,19 +227,35 @@
    <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r y J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials (Inglés) [Sobre el Número de Ceros Reales de los Oligonomios Aleatorios], <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
   </div>
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Artículos científicos de conferencia</h3>
-  </div></div>
+</div>
+<hr>
+<div id="conferencepapers">
+  <h2 class="display-4">Artículos científicos de conferencia</h2>
+
+  <br/><div class="cv">
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428v3" role="button">arXiv:2202.06428v3</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, J. Tonelli-Cueto y E. Tsigaridas. Beyond Worst-Case Analysis for Root Isolation Algorithms (Inglés) [Más allá del Análisis del Peor Caso en Algoritmos de Aislamiento de Raíces]. En <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, páginas 139–148. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3535475">DOI 10.1145/3476446.3535475</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3535475?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling:<br/>Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832v2" role="button">arXiv:2203.02832v2</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">A. Chalkis, Ch. Katsamaki y J. Tonelli-Cueto. On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves (Inglés) [Sobre el Error del Sampleo Aleatorio: Puntos Uniformemente Distribuidos en Curvas Paramétricas]. En <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, páginas 273–282. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3536190">DOI 10.1145/3476446.3536190</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3536190?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation</h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">M. Radons y J. Tonelli-Cueto. Generalized Perron roots and solvability of the absolute value equation (Inglés) [Raíces generalizadas de Perron y la ecuación del valor absoluto]. En L.F. Tabera Alonso (ed.), <a href="https://dmd2022.unican.es/"><i>Discrete Mathematics Days 2022</i></a>, páginas 237-242. Editorial Universidad de Cantabria, 2022. <span><a href="https://doi.org/10.22429/Euc2022.016">DOI 10.22429/Euc2022.016</a></span></div>
+  </div>
 
   <br/><div class="cv">
   <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
-  <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto y E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Inglés) [Números de Condición para el Cubo. I: Polinomios Univariados e Hipersuperficies]. En <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto y E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Inglés) [Números de Condición para el Cubo. I: Polinomios Univariados e Hipersuperficies]. En <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas 434-441. ACM, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
   </div>
 
 
   <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El Algoritmo de Plantinga-Vegter toma Tiempo Promedio Polinónimo]. En <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, páginas 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El Algoritmo de Plantinga-Vegter toma Tiempo Promedio Polinónimo]. En <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, páginas 114-121. ACM, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
   </div>
 
 </div>
@@ -279,11 +305,11 @@
       }
     x = document.getElementsByClassName("btn btn-arxiv");
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
+     x[i].style="width:100%;";
     }
     x = document.getElementsByClassName("btn btn-phd");
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
+     x[i].style="width:100%;";
     }
     x = document.getElementsByClassName("year");
     for (i = 0; i < x.length; i++) {
