--- a/arXiv.html
+++ b/arXiv.html
@@ -28,14 +28,14 @@
     	color: #F3BC1B;
       display: inline;
       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-      width:30%;
+      width:10em;
       font-size:medium;
       float:right;
       font-weight: normal;
       font-style: normal;
       font-variant:normal;
       height:1.5em;
-      width:15%;
+
       padding: 0em 0em;
       text-align: center;
     }
@@ -47,14 +47,13 @@
         display: inline;
         font-variant:inherit;
         font-style:inherit;
-        width:30%;
+        width:10em;
         font-size:medium;
         float:right;
         font-weight: normal;
         font-style: normal;
         font-variant:normal;
         height:1.5em;
-        width:15%;
         padding: 0em 0em;
         text-align: center;
     }
@@ -70,6 +69,7 @@
       script.src = url;
       head.appendChild(script);
     }
+    
     if (screen.width <= 699) {
       loadScript("js/arxiv_phone.js");
     } else {
@@ -171,7 +171,7 @@ This list is powered by my <a href="https://arxiv.org/a/tonellicueto_j_1.html">a
     x = document.getElementsByClassName("btn btn-arxiv");
     var i;
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
+     x[i].style="width:100%;";
     }
     document.getElementById("finalsentence").innerHTML="";
     }
