--- a/research.html
+++ b/research.html
@@ -89,7 +89,9 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #ee2523!important;color: white!important;"><i class="fas fa-square-root-alt"></i></a></li>
 	         <li class="nav-item"><a class="nav-link" href="#areas">Areas of interest</a></li>
            <!--<li class="nav-item"><a class="nav-link" href="#topics">Topics of interest</a></li>-->
-           <li class="nav-item"><a class="nav-link" href="#papers">Papers and preprints</a></li>
+           <li class="nav-item"><a class="nav-link" href="#preprints">Preprints</a></li>
+           <li class="nav-item"><a class="nav-link" href="#journalpapers">Journal papers</a></li>
+           <li class="nav-item"><a class="nav-link" href="#conferencepapers">Conference papers</a></li>
            <li class="nav-item"><a class="nav-link" href="#other">Other publications</a></li>
         </ul>
     </nav>
@@ -152,28 +154,33 @@
   </p>
 </div>
 <hr>
-<div id="papers">
-  <h2 class="display-4">Papers and preprints</h2>
-  <p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arXiv.html">my list of arXiv preprints</a>.</p>
+<div id="preprints">
+  <h2 class="display-4">Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button" style="font-size:0.6em;"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h2>
+  <!--<p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arXiv.html">my list of arXiv preprints</a>.</p>-->
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
-  </div></div>
-
-  <br/><div class="cv">
-   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
-   <div class="pretalktitle"></div>
+  <!--<br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
   </div>
 
   <br/><div class="cv">
    <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832" role="button">arXiv:2203.02832</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://tolischal.github.io/">Apostolos Chalkis</a> and <a href="https://webusers.imj-prg.fr/~christina.katsamaki/">Christina Katsamaki</a>)</div>
-   <div class="pretalktitle"></div>
+ </div>-->
+
+  <br/><div class="cv">
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with Jazz G. Suchen)</div>
   </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428" role="button">arXiv:2202.06428</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a> and <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://page.math.tu-berlin.de/~radons/">Manuel Radons</a>)</div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;A $p$-adic Descartes solver: the Strassman solver<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.07016" role="button">arXiv:2203.07016</a></h4></div>
+   <div class="pretalktitle"></div>
   </div>
 
   <br/><div class="cv">
@@ -198,9 +205,10 @@
    <div class="pretalktitle"></div><div class="collaborator">Accepted to <a href="https://www.springer.com/journal/454/"><i>Discrete & Computational Geometry</i></a>. This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Journal papers</h3>
-  </div></div>
+</div>
+<hr>
+<div id="journalpapers">
+  <h2 class="display-4">Journal papers</h2>
 
   <br/><div class="cv">
   <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
@@ -218,19 +226,35 @@
    <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials, <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
   </div>
 
-  <br/><div class="row"><div class="col-md-12">
-  <h3>Conference papers</h3>
-  </div></div>
+</div>
+<hr>
+<div id="conferencepapers">
+  <h2 class="display-4">Conference papers</h2>
+
+  <br/><div class="cv">
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Beyond Worst-Case Analysis for Root Isolation Algorithms<a class="btn btn-arxiv" href="https://arxiv.org/abs/2202.06428v3" role="button">arXiv:2202.06428v3</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, J. Tonelli-Cueto and E. Tsigaridas. Beyond Worst-Case Analysis for Root Isolation Algorithms. In <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, pages 139–148. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3535475">DOI 10.1145/3476446.3535475</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3535475?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling:<br/>Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832v2" role="button">arXiv:2203.02832v2</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">A. Chalkis, Ch. Katsamaki and J. Tonelli-Cueto. On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves. In <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, pages 273–282. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3536190">DOI 10.1145/3476446.3536190</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3536190?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  </div>
+
+  <br/><div class="cv">
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation</h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">M. Radons and J. Tonelli-Cueto. Generalized Perron roots and solvability of the absolute value equation. In L.F. Tabera Alonso (ed.), <a href="https://dmd2022.unican.es/"><i>Discrete Mathematics Days 2022</i></a>, pages 237-242. Editorial Universidad de Cantabria, 2022. <span><a href="https://doi.org/10.22429/Euc2022.016">DOI 10.22429/Euc2022.016</a></span></div>
+  </div>
 
   <br/><div class="cv">
   <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
-  <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
   </div>
 
 
   <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, pages 114-121. ACM, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
   </div>
 
 </div>
@@ -280,11 +304,11 @@
       }
     x = document.getElementsByClassName("btn btn-arxiv");
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
+     x[i].style="width:100%;";
     }
     x = document.getElementsByClassName("btn btn-phd");
     for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
+     x[i].style="width:100%;";
     }
     x = document.getElementsByClassName("year");
     for (i = 0; i < x.length; i++) {
