--- a/cv_es.html
+++ b/cv_es.html
@@ -3018,9 +3018,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
     <!--For buttons-->
     <script type="text/javascript">
     function show(y) {
-      if (y === 1901){var x = document.getElementById("ISSAC2019org");}
-      if (y === 1902){var x = document.getElementById("ISSAC2020org");}
-      if (y === 2107){var x = document.getElementById("ISSAC2021org");}
+      if (y === 2201){var x = document.getElementById("JMMpartners");}
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
