--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -469,16 +469,16 @@
     <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/kv_H87tGEEo" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">Beyond Worst-Case Analysis for Root Isolation Algorithms</b><br/>ISSAC'22, July 2022</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">Beyond Worst-Case Analysis for Root Isolation Algorithms</b><br/>ISSAC'22, julio de 2022</p>
     </div>
     <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/Y9gKSLMfVlY" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">Introductory Talk to the MiniSympoium<br/>on Computational Real Algebraic Geometry</b><br/>SIAM AG21, August 2021</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">Introductory Talk to the MiniSympoium<br/>on Computational Real Algebraic Geometry</b><br/>SIAM AG21, agosto de 2021</p>
     </div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/sGwI7t79d4s" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">Symbolic vs Numerical: Allies or Enemies?</b><br/>MCA2021, July 2021</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">Symbolic vs Numerical: Allies or Enemies?</b><br/>MCA2021, julio de 2021</p>
     </div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/hmFY7y9Uyic" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -486,14 +486,14 @@
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/KYDo42gCZYg" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
-    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">A Numerical Algorithm for Zero Counting. IV: An Adaptive Speedup</b><br/>MEGA2021, June 2021</p></div>
+    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">A Numerical Algorithm for Zero Counting. IV: An Adaptive Speedup</b><br/>MEGA2021, junio de 2021</p></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/4Qu0F3x2f6Y" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/_mO_MQXjhiA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
-    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">Functional norms, condition numbers and numerical algorithms in algebraic geometry</b><br/>MEGA2021, June 2021</p></div>
+    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">Functional norms, condition numbers and numerical algorithms in algebraic geometry</b><br/>MEGA2021, junio de 2021</p></div>
     <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/ME3BuPjSa-4" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
