--- a/multimedia.html
+++ b/multimedia.html
@@ -465,7 +465,7 @@
   <h3>Videos of talks at conferences & other events</h3>
   <p>These are some of my recorded talks. The talks that are available on YouTube have been collected in a <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>YouTube playlist</em></a>.</p>
   <div class="row">
-    <!--<div class="col-md-3"></div>
+    <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/kv_H87tGEEo" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">Beyond Worst-Case Analysis for Root Isolation Algorithms</b><br/>ISSAC'22, July 2022</p>
@@ -478,7 +478,7 @@
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/sGwI7t79d4s" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">Symbolic vs Numerical: Allies or Enemies?</b><br/>MCA2021, July 2021</p>
-    </div>-->
+    </div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/hmFY7y9Uyic" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
