--- a/fragmentosdeunberlin.html
+++ b/fragmentosdeunberlin.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="robots" content="noindex">
     <meta http-equiv="Refresh" content="0; url=https://www.dropbox.com/sh/r6e1ry75vs15yms/AABjLj9Zuil3SJmId8_-5b2da?dl=0" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
