--- a/PublicFolderDB.html
+++ b/PublicFolderDB.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name=”robots” content=”noindex”>
+    <meta name="robots" content="noindex">
     <meta http-equiv="Refresh" content="0; url=https://www.dropbox.com/scl/fo/2hzmpvlg9h43vznhk9jug/h?dl=0&rlkey=wgirlhan7wopc0mz1lvuz8ace" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
